tests/fixtures/bad/ParamsCountBad4.php
<?php

namespace ParamsCountBad4;

class A
{
	function test($a1 = null)
	{
	}
}


class B extends A
{
	function test()
	{
	}
}
